--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,11 +12,11 @@ html body {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }*/
 
+/*header*/
 
-
+/*nav bar*/
 .nav-top {
 	float: right;
-
 }
 .nav-top h1 a {
 	text-decoration: none;
@@ -47,15 +47,6 @@ html body {
 	margin-bottom: 30px;
 }
 
-/*svg {*/
-  /* border: 1px solid black; */
-  /*margin: 0;
-  position: left;
-  height: 200px;
-  width: 300px;
-  margin: 10vh;
-  transform: translateY(-40%);
-}*/
 
 
 /*MAIN*/
@@ -88,20 +79,85 @@ h3 {
 
 
 #results {
+	position: absolute;
+	/*display: block;*/
 	margin: 0 auto;
 	color: white;
 	font-family: 'Bitter', serif;
 	border-color: #3C5661;
 	border-left: 5px solid #3C5661;
+}
 
+#results h1 {
+	color: purple;
+	font-weight: bold;
 }
 
 #results h2 {
-	color: black;
+	color: #BF3100;
 	font-weight: bold;
 }
 
 #results h3 {
-	color: purple;
+	color: #FF4E00;
 	font-size: 20px;
 }
+
+#results h4 {
+	color: #F5BB00;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+
+
+
+/*FOOTER*/
+.footer {
+    background: #222222 none repeat scroll 0 0;
+    border-top: 4px solid #fcab0e;
+    margin: 0;
+    padding: 20px 0;
+    margin-top: 200px;
+}
+.footer_dv {
+    width: 100%;
+}
+.footer_dv h4 {
+    color: #fcab0e;
+    font-family: roboto;
+    font-weight: bold;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+.footer_dv ul {
+    list-style: outside none none;
+    margin: 0;
+    padding: 0;
+}
+.footer_dv ul li:first-child {
+    border-top: medium none;
+    box-shadow: none;
+}
+.footer_dv ul li {
+    border-top: 1px solid #000;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.2);
+    color: #f1f2f2;
+    padding: 5px 0;
+}
+.footer_dv p {
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0 0 15px;
+    text-align: justify;
+}
+
+
+
+
+
+
+
+
+
